# super3d

./: CMakeLists.txt  LICENSE  imesh  super3d-config.cmake.in
CMake/: super3d-flags-gnu.cmake  super3d-flags-msvc.cmake  super3d-flags.cmake  super3d-packaging.cmake  super3d-utils.cmake
CMake/tools/: configure-helper.cmake
CMake/utils/: super3d-utils-configuration.cmake  super3d-utils-doxygen.cmake  super3d-utils-modules.cmake  super3d-utils-targets.cmake  super3d-utils-tests.cmake
config/: fountain.cfg  robust_synth.cfg  sr_robust_factor.cfg  sr_robust_gradient.cfg  sr_robust_shift.cfg  synth-paths.cfg  synth-super.cfg  synth.cfg
doc/rel_notes/: afrl_pending_approval.txt  changes.txt
libraries/: CMakeLists.txt  adjoint_image_op.h  cl_manager.cxx  config.cxx  config.h  cost_volume.cxx  cost_volume.h  depth_map.cxx  depth_map.h  exposure.cxx  exposure.h  file_io.cxx  file_io.h  flow_manip.cxx  flow_warp.h  multiscale.cxx  normal_map.cxx  normal_map.h  rof.cl  rof_cl.cxx  super_config.cxx  super_config.h  super_depth.cxx  super_depth.h  super_res.cxx  super_res.h  super_res_color.cxx  tv_refine_plane.cxx  tv_refine_plane.h  tv_refine_search.cxx  tv_refine_search.h  weighted_dbw.cxx  weighted_dbw.h  world_frustum.cxx  world_frustum.h  world_rectilinear.cxx  world_rectilinear.h  world_space.cxx
libraries/depth_cl/: CMakeLists.txt  dual_rof.cl  dual_rof.cxx  dual_rof.h  refine_depth.cl  refine_depth.cxx  refine_depth.h  super_res.cl  super_res.cxx  super_res.h
scripts/: batch_experiments.py  batch_super_res_video.sh  score_depthmap.py  score_super.py  vidpy_image_metric.py
scripts/blender/: io_export_scene_lights.py
scripts/fcn/: chipper.py  deploy.prototxt  infer.py  readme  solver.prototxt  (+1 more)
super3d/: CMakeLists.txt  config.h.in
super3d/depth/: CMakeLists.txt  adjoint_image_op.cxx  cl_manager.cxx  cost_volume.cxx  cost_volume.h  depth_config.h  depth_map.cxx  depth_map.h  exposure.cxx  exposure.h  file_io.cxx  file_io.h  flow_manip.cxx  flow_manip.h  flow_warp.h  image_derivs.h  image_utils.h  meanshift_normals.cxx  meanshift_normals.h  multiscale.cxx  multiscale.h  normal_map.cxx  normal_map.h  resample.h  rof_normals.cxx  rof_normals.h  super_config.cxx  super_config.h  super_depth.cxx  super_depth.h  super_res.cxx  super_res.h  super_res_color.cxx  super_res_color.h  super_res_robust.cxx  super_res_robust_function.cxx  super_res_robust_function.h  tv_refine_plane.cxx  tv_refine_plane.h  tv_refine_search.cxx  (+13 more)
super3d/depth_cl/: CMakeLists.txt  depth_cl_config.h  dual_rof.cl  dual_rof.cxx  dual_rof.h  refine_depth.cl  refine_depth.cxx  refine_depth.h  super_res.cl  super_res.cxx  super_res.h
super3d/image/: CMakeLists.txt  adjoint_dbw.cxx  adjoint_dbw.h  adjoint_flow_warp.h  adjoint_image_derivs.h  adjoint_image_op.cxx  adjoint_image_op.h  adjoint_image_utils.h  adjoint_resample.h  dense_optical_flow.cxx  dense_optical_flow.h  dual_rof_denoise.cxx  dual_rof_denoise.h  gaussian_pyramid_builder.h  gaussian_pyramid_builder.hxx  gaussian_pyramid_builder.txx  gaussian_pyramid_builder_instances.cxx  middlebury_flow_io.cxx  middlebury_flow_io.h  refine_homography.cxx  refine_homography.h  super_res.cxx  super_res.h  super_res_utils.cxx  super_res_utils.h  warp_and_average.h  warp_and_average.hxx  warp_and_average.txx  warp_and_average_instances.cxx  warp_image.cxx  warp_image.h  warp_image.hxx  warp_image.txx  warp_image_instances.cxx
super3d/imesh/: CMakeLists.txt  imesh_config.h  imesh_detection.cxx  imesh_detection.h  imesh_face.cxx  imesh_face.h  imesh_fileio.cxx  imesh_fileio.h  imesh_half_edge.cxx  imesh_half_edge.h  imesh_mesh.cxx  imesh_mesh.h  imesh_operations.cxx  imesh_operations.h  imesh_vertex.h
super3d/imesh/Templates/: vbl_smart_ptr+imesh_mesh-.cxx
super3d/imesh/algo/: .swp  CMakeLists.txt  imesh_algo_config.h  imesh_detect.cxx  imesh_detect.h  imesh_generate_mesh.cxx  imesh_generate_mesh.h  imesh_imls_surface.cxx  imesh_imls_surface.h  imesh_imls_surface.hxx  imesh_imls_surface.txx  imesh_intersect.cxx  imesh_intersect.h  imesh_kd_tree.cxx  imesh_kd_tree.h  imesh_kd_tree.hxx  imesh_kd_tree.txx  imesh_operations.cxx  imesh_operations.h  imesh_pca.cxx  imesh_pca.h  imesh_project.cxx  imesh_project.h  imesh_render.cxx  imesh_render.h  imesh_transform.h
super3d/imesh/algo/Templates/: imesh_imls_surface+imesh_imls_surface+-integral_data.vgl_point_3d+double--.cxx  imesh_imls_surface+vgl_vector_2d+double-.vgl_point_3d+double--.cxx
super3d/imesh/algo/tests/: test_include.cxx
super3d/imesh/tests/: test_include.cxx  test_intersect.cxx
super3d/vxl_brl_imesh/: CMakeLists.txt
super3d/vxl_brl_imesh/algo/: CMakeLists.txt  imesh_detect.cxx  imesh_kd_tree.cxx  imesh_project.cxx  imesh_project.h
super3d/vxl_brl_imesh/tests/: test_share.cxx
tests/: CMakeLists.txt  test-utils.cmake  test_common.h  test_normal_map.cxx
tests/data/: middlebury_sample.flo
tests/depth/: CMakeLists.txt  test_normal_map.cxx
tests/image/: CMakeLists.txt  test_dual_rof_denoise.cxx  test_flow_warp.cxx  test_gaussian_pyramid_builder.cxx  test_image_derivs.cxx  test_middlebury_flow_io.cxx  test_refine_homography.cxx  test_resample.cxx  test_super_res.cxx  test_warp_image.cxx
tests/imesh/: CMakeLists.txt  test_detect.cxx  test_imls_surface.cxx  test_intersect.cxx  test_kd_tree.cxx  test_share.cxx  test_share.h
tests/imesh_algo/: CMakeLists.txt  test_generate_mesh.cxx  test_include.cxx  test_template_include.cxx
tools/: CMakeLists.txt  bundler2vpgl.cxx  cam_and_homog_picker.cxx  convert_epfl_to_vpgl_cameras.py  depth_from_flow.cxx  direct_depth.cxx  downsampler.cxx  encode_string.cxx  exhaustive_depth.cxx  exhaustive_stereo.cxx  extract_depth_range.cxx  extract_nitf_roi_krtd.cxx  extract_nitf_rpc.cxx  mean_shift.cxx  picker.cxx  picker.h  ply2pts.cxx  ply2vtp.cxx  refine_homog.cxx  refine_homog.h  refine_homog_batch.cxx  refine_homog_gui.cxx  render.cxx  render.h  render_depthmap.cxx  rofcl_test.cxx  super_res_image.cxx  super_res_opt_flow.cxx  super_res_opt_flow_gpu.cxx  super_res_video.cxx  tv_refine.cxx  tv_refine.h  tvg_pyramid.cxx  video_depth.cxx  viewer.cxx
(+2 files in other folders)
